Removed an issue where the previous chosen card could be seen after shuffling on mobile due to the hover effect lingering. Hover effect is changed to only affect devices with aspect ratio of at least 1 and a background color is now added and removed within the cardClick function itself. It is added after an element is cicked (although not the easiest seen due to the transition time affecting it) and removed during the transition

--- a/src/components/CardFunctions.module.css
+++ b/src/components/CardFunctions.module.css
@@ -73,15 +73,10 @@
     transform: rotateY(0deg);
 }
 
-.front:hover {
-    background-color: #3590F3;
-    transition: 0.5s;
-    cursor: pointer;
-}
-
 .pokemonName {
     margin-top: .6vh;
     font-size: 2.2vh;
+    width: 99%;
 }
 
 
@@ -93,6 +88,11 @@
     }
     .mainGameBodyDiv {
         justify-content: center;
+    }
+    .front:hover {
+        background-color: #3590F3;
+        transition: 0.5s;
+        cursor: pointer;
     }
 }
 
